--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,4 +36,6 @@ body{
 }
 
 @import "html/inicio";
-@import "html/sobrenosotros"
+@import "html/sobrenosotros";
+@import "html/destinos";
+@import "html/promociones";
