--- a/scss/html/_sobrenosotros.scss
+++ b/scss/html/_sobrenosotros.scss
@@ -2,10 +2,9 @@
 
 div{
     .container{
-        height: 100vh;
         display: grid;
-        grid-template-columns: repeat(2 1fr);
-        grid-template-rows: repeat(2 2fr);
+        grid-template-columns: repeat(2 0.5fr);
+        grid-template-rows: repeat(2 1fr);
         justify-content: center;
         align-items: center;
 
@@ -14,17 +13,20 @@ div{
         "main-sn box-imagen";
     }
     main{
+        background-color: red;
+        width: 50%;
+        margin-left: 0;
+        margin-right: 0;
         .main-sn{
             grid-area: main-sn;
         }
-        p{
-            .sobren{
-                display: inline-block;
+        .sobren{
+                // display: inline-block;
                 justify-content: center;
                 margin-bottom: 20px;
-                margin-left: 10px;
-                margin-right: 10px;
-                width: 500px;
+                margin-left: 5px;
+                margin-right: 5px;
+                // width: 20px;
                 justify-content: center;
                 align-items: center;            
             }
@@ -34,20 +36,20 @@ div{
             #ultimo{
                 margin-top: 10px;
             }
-        }
     }    
     section{
         margin: 0;
-        width: 300px;
+        width: 50%;
+        background-color: blue;
         .box-imagen{
             grid-area: box-imagen;
         }
         .casa2{
             width: 400px;
             height: 500px;
-            position: relative;
-            top: 60px;
-            left: 20px;  
+            // position: relative;
+            top: 30px;
+            left: 50px;  
             right: 50px;
         }
     }
