arreglado problemas con scss

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,7 +16,7 @@ body{
     align-items: center;
     header{
         background-color: #A3B18A;
-        margin-bottom: 20px;
+        // margin-bottom: 20px;
     }
     main{
         h1{
