--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,7 @@ body {
   background-color: #edeec9;
   align-items: center; }
   body header {
-    background-color: #A3B18A;
-    margin-bottom: 20px; }
+    background-color: #A3B18A; }
   body main h1 {
     margin-top: 30px;
     text-align: center; }
@@ -37,11 +36,11 @@ main .slide {
     justify-content: center;
     object-fit: cover; }
 
-main p {
+main .parrafo-home {
   margin: 10px 35px;
   text-align: justify; }
 
-main h2 {
+main .subtitulo-home {
   margin-top: 50px;
   text-align: center; }
 
@@ -82,84 +81,91 @@ main .box-texto {
       margin-left: 3%; }
 
 /*SOBRE NOSOTROS*/
-div .container {
+.container {
   display: grid;
-  grid-template-columns: repeat(2 0.5fr);
-  grid-template-rows: repeat(2 1fr);
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
   justify-content: center;
   align-items: center;
-  grid-template-areas: "main-sn box-imagen" "main-sn box-imagen"; }
+  grid-template-areas: "main-sn box-imagen" "main-sn box-imagen";
+  gap: 10px; }
 
-div main {
-  background-color: red;
-  width: 50%;
+main {
   margin-left: 0;
-  margin-right: 0; }
-  div main .main-sn {
+  margin-right: 20px; }
+  main .main-sn {
     grid-area: main-sn; }
-  div main .sobren {
+  main .sobren {
     justify-content: center;
     margin-bottom: 20px;
     margin-left: 5px;
     margin-right: 5px;
-    justify-content: center;
-    align-items: center; }
-  div main #parrafo1 {
-    margin-top: 60px; }
-  div main #ultimo {
-    margin-top: 10px; }
+    align-items: center;
+    text-align: justify; }
+  main #parrafo1 {
+    margin-top: 40px; }
+  main #ultimo {
+    margin-top: -5px; }
 
-div section {
-  margin: 0;
-  width: 50%;
-  background-color: blue; }
-  div section .box-imagen {
+section {
+  margin: 0; }
+  section .box-imagen {
     grid-area: box-imagen; }
-  div section .casa2 {
-    width: 400px;
-    height: 500px;
-    top: 30px;
-    left: 50px;
-    right: 50px; }
+  section .casa2 {
+    width: 65%;
+    height: 70%;
+    position: relative;
+    top: 50px;
+    left: 20px;
+    right: 20px; }
 
 /*DESTINOS*/
-div .container2 {
+.container2 {
   display: grid;
   grid-template-columns: auto auto;
   grid-auto-rows: auto auto;
   justify-content: center;
-  grid-template-areas: "main-titulo main-titulo" "section-uno section-dos" "section-tres section-cuatro" "footer footer";
+  grid-template-areas: "main-titulo main-titulo" "section-uno section-dos" "section-tres section-cuatro";
   gap: 10px; }
-  div .container2 main .main-titulo {
+
+main {
+  justify-content: center;
+  align-items: center;
+  text-align: center; }
+  main .main-titulo {
+    width: 100%;
+    margin-left: 50px;
     grid-area: main-titulo; }
-  div .container2 section .destino {
-    width: 330px;
-    height: 270px;
-    margin: 15px; }
-  div .container2 section .section-uno {
-    grid-area: section-uno; }
-  div .container2 section .section-dos {
-    grid-area: section-dos; }
-  div .container2 section .section-tres {
-    grid-area: section-tres; }
-  div .container2 section .section-cuatro {
-    grid-area: section-cuatro; }
-  div .container2 section .destino-img {
-    width: 330px;
-    height: 270px;
-    object-fit: cover;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer; }
-  div .container2 section .destino-img:hover {
+
+section.destino {
+  width: 330px;
+  height: 270px;
+  margin: 15px; }
+
+.section-uno {
+  grid-area: section-uno; }
+
+.section-dos {
+  grid-area: section-dos; }
+
+.section-tres {
+  grid-area: section-tres; }
+
+.section-cuatro {
+  grid-area: section-cuatro; }
+
+.destino-img {
+  width: 330px;
+  height: 270px;
+  object-fit: cover;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer; }
+  .destino-img:hover {
     transform: scale(1.05);
     transition: 0.1s;
     box-shadow: 0px 10px 30px -1px #3d3c3c; }
-  div .container2 section h2 .subtitulo {
-    margin-top: 1%;
-    text-align: center;
-    font-size: 24px; }
-  div .container2 footer {
+  .destino-img .footer-destino {
     grid-area: footer; }
 
 /*PROMOCIONES*/
