--- a/scss/html/_inicio.scss
+++ b/scss/html/_inicio.scss
@@ -15,11 +15,11 @@ main{
             }
         }
     }
-    p{
+    .parrafo-home{
         margin: 10px 35px;
         text-align: justify;
     }
-    h2{
+    .subtitulo-home{
         margin-top: 50px;
         text-align: center;
     }
