--- a/scss/html/_sobrenosotros.scss
+++ b/scss/html/_sobrenosotros.scss
@@ -1,22 +1,24 @@
 /*SOBRE NOSOTROS*/
 
-div{
-    .container{
+.container{
         display: grid;
-        grid-template-columns: repeat(2 0.5fr);
-        grid-template-rows: repeat(2 1fr);
+        // grid-template-columns: repeat(2 0.5fr);
+        // grid-template-rows: repeat(2 1fr);
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto;
         justify-content: center;
         align-items: center;
 
         grid-template-areas: 
         "main-sn box-imagen"
         "main-sn box-imagen";
+        gap: 10px;
     }
     main{
-        background-color: red;
-        width: 50%;
+        // background-color: red;
+        // width: 50%;
         margin-left: 0;
-        margin-right: 0;
+        margin-right: 20px;
         .main-sn{
             grid-area: main-sn;
         }
@@ -27,31 +29,32 @@ div{
                 margin-left: 5px;
                 margin-right: 5px;
                 // width: 20px;
-                justify-content: center;
-                align-items: center;            
+                align-items: center;
+                text-align: justify;            
             }
             #parrafo1{
-                margin-top: 60px;
+                margin-top: 40px;
             }
             #ultimo{
-                margin-top: 10px;
+                margin-top: -5px;
             }
     }    
     section{
         margin: 0;
-        width: 50%;
-        background-color: blue;
+        // width: 50%;
+        // background-color: blue;
         .box-imagen{
             grid-area: box-imagen;
         }
         .casa2{
-            width: 400px;
-            height: 500px;
-            // position: relative;
-            top: 30px;
-            left: 50px;  
-            right: 50px;
+            // width: 400px;
+            // height: 450px;
+            width: 65%;
+            height: 70%;
+            position: relative;
+            top: 50px;
+            left: 20px;  
+            right: 20px;
         }
     }
     
-}
