--- a/css/style.css
+++ b/css/style.css
@@ -112,11 +112,11 @@ section {
   section .box-imagen {
     grid-area: box-imagen; }
   section .casa2 {
-    width: 65%;
+    width: 68%;
     height: 70%;
     position: relative;
     top: 50px;
-    left: 20px;
+    left: 50px;
     right: 20px; }
 
 /*DESTINOS*/
@@ -125,7 +125,7 @@ section {
   grid-template-columns: auto auto;
   grid-auto-rows: auto auto;
   justify-content: center;
-  grid-template-areas: "main-titulo main-titulo" "section-uno section-dos" "section-tres section-cuatro";
+  grid-template-areas: "section-uno section-dos" "section-tres section-cuatro";
   gap: 10px; }
 
 main {
@@ -133,6 +133,7 @@ main {
   align-items: center;
   text-align: center; }
   main .main-titulo {
+    background-color: purple;
     width: 100%;
     margin-left: 50px;
     grid-area: main-titulo; }
@@ -165,20 +166,54 @@ section.destino {
     transform: scale(1.05);
     transition: 0.1s;
     box-shadow: 0px 10px 30px -1px #3d3c3c; }
-  .destino-img .footer-destino {
-    grid-area: footer; }
+
+.subtitulo {
+  margin-top: 1%;
+  text-align: center;
+  font-size: 24px; }
 
 /*PROMOCIONES*/
+main .promociones .subtitulo-prom {
+  margin-top: 40px; }
+
 main .promociones img {
   width: 800px;
   height: 250px;
-  object-fit: cover; }
+  object-fit: cover;
+  margin-top: 2%;
+  margin-bottom: 3%; }
   main .promociones img .casa5 {
-    margin-top: 2%;
-    margin-left: 20%;
-    margin-bottom: 5%;
-    cursor: pointer;
-    transition: .5s; }
-  main .promociones img .casa5:hover {
+    cursor: pointer; }
+  main .promociones img:hover {
     transform: scale(1.02);
+    transition: .5s;
     box-shadow: 0px 15px 30px -3px #3d3c3c; }
+
+/*CONTACTO*/
+fieldset {
+  margin: 20px 420px;
+  padding: 20px;
+  width: 500px; }
+  fieldset label {
+    display: flex;
+    align-items: flex-start; }
+  fieldset input, fieldset textarea {
+    width: 100%;
+    padding: 5px; }
+  fieldset .boton {
+    width: 50%;
+    margin-top: 5px;
+    margin-left: 100px;
+    display: flex;
+    justify-content: center; }
+
+.contacto {
+  margin-left: -5px;
+  text-align: center; }
+  .contacto a {
+    text-decoration: none;
+    color: black; }
+  .contacto .iconos {
+    width: 2%;
+    margin: 0;
+    padding: 0; }
