--- a/scss/html/_destinos.scss
+++ b/scss/html/_destinos.scss
@@ -7,7 +7,6 @@
     justify-content: center;
   
     grid-template-areas:
-      "main-titulo main-titulo"
       "section-uno section-dos"
       "section-tres section-cuatro";
   
@@ -18,6 +17,7 @@
       align-items: center;
       text-align: center;
     .main-titulo {
+      background-color: purple;
       width: 100%;
       margin-left: 50px;
       grid-area: main-titulo;
@@ -60,10 +60,12 @@
       transition: 0.1s;
       box-shadow: 0px 10px 30px -1px rgb(61, 60, 60);
     }
+  }
 
-    .footer-destino{
-      grid-area: footer;
-    }
+  .subtitulo{
+    margin-top: 1%;
+    text-align: center;
+    font-size: 24px;
 }
 
 // div{
