--- a/css/style.css
+++ b/css/style.css
@@ -97,35 +97,34 @@ main .box-texto {
   align-items: center;
   grid-template-areas: "main-sn box-imagen" "main-sn box-imagen";
   gap: 10px; }
-
-main {
-  margin-left: 0;
-  margin-right: 20px; }
-  main .main-sn {
-    grid-area: main-sn; }
-  main .sobren {
-    justify-content: center;
-    margin-bottom: 20px;
-    margin-left: 5px;
-    margin-right: 5px;
-    align-items: center;
-    text-align: justify; }
-  main #parrafo1 {
-    margin-top: 40px; }
-  main #ultimo {
-    margin-top: -5px; }
-
-section {
-  margin: 0; }
-  section .box-imagen {
-    grid-area: box-imagen; }
-  section .casa2 {
-    width: 68%;
-    height: 70%;
-    position: relative;
-    top: 50px;
-    left: 50px;
-    right: 20px; }
+  .container main {
+    margin-left: 0;
+    margin-right: 20px; }
+    .container main .main-sn {
+      grid-area: main-sn; }
+    .container main .sobren {
+      justify-content: center;
+      margin-top: 10px;
+      margin-bottom: 20px;
+      margin-left: 5px;
+      margin-right: 5px;
+      align-items: center;
+      text-align: justify; }
+      .container main .sobren #parrafo1 {
+        margin-top: 40px; }
+      .container main .sobren #ultimo {
+        margin-top: -5px; }
+  .container section {
+    margin: 0; }
+    .container section .box-imagen {
+      grid-area: box-imagen; }
+    .container section .casa2 {
+      width: 68%;
+      height: 70%;
+      position: relative;
+      top: 50px;
+      left: 50px;
+      right: 20px; }
 
 /*DESTINOS*/
 main {
@@ -162,32 +161,30 @@ main {
     object-fit: cover;
     justify-content: center;
     align-items: center;
-    cursor: pointer; }
-    .container2 .destino-img:hover {
-      transform: scale(1.05);
-      transition: 0.1s;
-      box-shadow: 0px 10px 30px -1px #3d3c3c; }
+    cursor: pointer;
+    border-radius: 4px; }
   .container2 .subtitulo {
-    margin-top: 1%;
+    margin-top: -35px;
     text-align: center;
-    font-size: 24px; }
+    font-size: 24px;
+    color: antiquewhite;
+    text-shadow: 2px 2px 4px black; }
 
 /*PROMOCIONES*/
-main .promociones .subtitulo-prom {
+main div {
   margin-top: 40px; }
-
-main .promociones img {
-  width: 800px;
-  height: 250px;
-  object-fit: cover;
-  margin-top: 2%;
-  margin-bottom: 3%; }
-  main .promociones img .casa5 {
+  main div .card-title {
+    margin-top: 120px; }
+  main div .card-text {
+    margin-top: 10px; }
+  main div .card-img {
+    width: 800px;
+    height: 250px;
+    object-fit: cover;
     cursor: pointer; }
-  main .promociones img:hover {
+  main div:hover {
     transform: scale(1.02);
-    transition: .5s;
-    box-shadow: 0px 15px 30px -3px #3d3c3c; }
+    transition: .5s; }
 
 /*CONTACTO*/
 fieldset {
