--- a/scss/html/_destinos.scss
+++ b/scss/html/_destinos.scss
@@ -51,17 +51,14 @@ main {
     justify-content: center;
     align-items: center;
     cursor: pointer;
-  
-    &:hover {
-      transform: scale(1.05);
-      transition: 0.1s;
-      box-shadow: 0px 10px 30px -1px rgb(61, 60, 60);
-    }
+    border-radius: 4px;
   }
-
   .subtitulo{
-    margin-top: 1%;
+    // margin-top: 1%;
+    margin-top: -35px;
     text-align: center;
     font-size: 24px;
+    color: antiquewhite;
+    text-shadow: 2px 2px 4px black;
   }
 }
