--- a/scss/html/_promociones.scss
+++ b/scss/html/_promociones.scss
@@ -1,25 +1,23 @@
 /*PROMOCIONES*/
 
 main{
-    .promociones{
-        .subtitulo-prom{
-            margin-top: 40px;
+    div{
+        margin-top: 40px;
+        .card-title{
+            margin-top: 120px;
         }
-        img{
+        .card-text{
+            margin-top: 10px;
+        }
+        .card-img{
             width: 800px;
             height: 250px;
             object-fit: cover;
-            margin-top: 2%;
-            margin-bottom: 3%;
-            .casa5{
-                // margin-left: 20%;
-                cursor: pointer;      
-            }
-            &:hover{
-                transform: scale(1.02);
-                transition: .5s;  
-                box-shadow: 0px 15px 30px -3px rgb(61, 60, 60);
-            }
+            cursor: pointer;
+        }
+        &:hover{
+            transform: scale(1.02);
+            transition: .5s;  
         }
     }
 }
