--- a/scss/html/_sobrenosotros.scss
+++ b/scss/html/_sobrenosotros.scss
@@ -1,54 +1,44 @@
 /*SOBRE NOSOTROS*/
 
 .container{
-        display: grid;
-        // grid-template-columns: repeat(2 0.5fr);
-        // grid-template-rows: repeat(2 1fr);
-        grid-template-columns: auto auto;
-        grid-template-rows: auto auto;
-        justify-content: center;
-        align-items: center;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    justify-content: center;
+    align-items: center;
 
-        grid-template-areas: 
-        "main-sn box-imagen"
-        "main-sn box-imagen";
-        gap: 10px;
-    }
+    grid-template-areas: 
+    "main-sn box-imagen"
+    "main-sn box-imagen";
+    gap: 10px;
     main{
-        // background-color: red;
-        // width: 50%;
         margin-left: 0;
         margin-right: 20px;
         .main-sn{
             grid-area: main-sn;
         }
         .sobren{
-                // display: inline-block;
-                justify-content: center;
-                margin-bottom: 20px;
-                margin-left: 5px;
-                margin-right: 5px;
-                // width: 20px;
-                align-items: center;
-                text-align: justify;            
-            }
+            justify-content: center;
+            margin-top: 10px;
+            margin-bottom: 20px;
+            margin-left: 5px;
+            margin-right: 5px;
+            align-items: center;
+            text-align: justify;            
             #parrafo1{
                 margin-top: 40px;
             }
             #ultimo{
                 margin-top: -5px;
             }
+        }
     }    
     section{
         margin: 0;
-        // width: 50%;
-        // background-color: blue;
         .box-imagen{
             grid-area: box-imagen;
         }
         .casa2{
-            // width: 300px;
-            // height: 450px;
             width: 68%;
             height: 70%;
             position: relative;
@@ -57,4 +47,4 @@
             right: 20px;
         }
     }
-    
+}
