--- a/scss/html/_contacto.scss
+++ b/scss/html/_contacto.scss
@@ -11,6 +11,7 @@ fieldset{
     input, textarea{
         width: 100%;
         padding: 5px;
+        border-radius: 4px;
     }
     .boton{
         width: 50%;
@@ -18,6 +19,7 @@ fieldset{
         margin-left: 100px;
         display: flex;
         justify-content: center;
+        border-radius: 4px;
     }
 }
 .contacto{
