--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+main .parrafo-home, main .promo {
+  margin: 10px 35px;
+  text-align: justify; }
+
 /*RESET*/
 * {
   margin: 0;
@@ -38,10 +42,6 @@ main .slide {
     justify-content: center;
     object-fit: cover; }
 
-main .parrafo-home {
-  margin: 10px 35px;
-  text-align: justify; }
-
 main .subtitulo-home {
   margin-top: 50px;
   text-align: center; }
@@ -62,14 +62,16 @@ main .box-imagen {
   justify-content: center; }
 
 main .casa {
+  justify-content: center;
+  align-items: center;
+  object-fit: cover;
+  cursor: pointer;
   width: 17rem;
   height: 300px;
-  object-fit: cover;
   margin-top: 3%;
   margin-bottom: 0;
   margin-left: 3%;
   margin-right: 3%;
-  cursor: pointer;
   display: flex; }
 
 main .box-texto {
@@ -156,12 +158,12 @@ main {
   .container2 .section-cuatro {
     grid-area: section-cuatro; }
   .container2 .destino-img {
-    width: 330px;
-    height: 270px;
-    object-fit: cover;
     justify-content: center;
     align-items: center;
+    object-fit: cover;
     cursor: pointer;
+    width: 330px;
+    height: 270px;
     border-radius: 4px; }
   .container2 .subtitulo {
     margin-top: -35px;
@@ -171,10 +173,6 @@ main {
     text-shadow: 2px 2px 4px black; }
 
 /*PROMOCIONES*/
-main .promo {
-  margin: 10px 35px;
-  text-align: justify; }
-
 main .card {
   margin-top: 40px; }
   main .card .card-title {
@@ -221,7 +219,33 @@ fieldset {
     margin: 0;
     padding: 0; }
 
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 600px) {
+  header .logo {
+    display: none; }
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    main .carousel {
+      display: none; }
+    main .card {
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      main .card .card-img {
+        width: 500px;
+        height: 250px; }
+  .container2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .container2 .destino-img {
+      width: 330px;
+      height: 270px; }
+  section .casa2 {
+    display: none; } }
+
+@media screen and (max-width: 320px) {
   header .logo {
     display: none; }
   footer {
@@ -255,29 +279,5 @@ fieldset {
       align-items: center;
       width: 310px;
       height: 200px; }
-  section .casa2 {
-    display: none; } }
-
-@media screen and (min-width: 600px) {
-  header .logo {
-    display: none; }
-  main {
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-    main .card {
-      display: flex;
-      flex-direction: column;
-      align-items: center; }
-      main .card .card-img {
-        width: 500px;
-        height: 250px; }
-  .container2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-    .container2 .destino-img {
-      width: 330px;
-      height: 270px; }
   section .casa2 {
     display: none; } }
