--- a/scss/html/_destinos.scss
+++ b/scss/html/_destinos.scss
@@ -45,16 +45,12 @@ main {
   }
   
   .destino-img {
+    @include imagenes;
     width: 330px;
     height: 270px;
-    object-fit: cover;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
     border-radius: 4px;
   }
   .subtitulo{
-    // margin-top: 1%;
     margin-top: -35px;
     text-align: center;
     font-size: 24px;
