--- a/scss/html/_inicio.scss
+++ b/scss/html/_inicio.scss
@@ -16,22 +16,21 @@ main{
         }
     }
     .parrafo-home{
-        margin: 10px 35px;
-        text-align: justify;
+        @extend %texto-parrafo;
     }
     .subtitulo-home{
         margin-top: 50px;
         text-align: center;
     }
     .card{
-        background-color: #edeec9;
+        background-color: $color-secundario;
         display: inline-flex;
         margin-left: 10px;
     }
     .card:hover{
         transform: scale(1.05);
         transition: 0.3s;
-        border: #A3B18A;
+        border: $color-principal;
         box-shadow: 0px 13px 30px -3px rgb(61, 60, 60);
     }
     .box-imagen{
@@ -39,14 +38,13 @@ main{
         justify-content: center;
     }
     .casa{
+        @include imagenes;
         width: 17rem;
         height: 300px;
-        object-fit: cover;
         margin-top: 3%;
         margin-bottom: 0;
         margin-left: 3%;
-        margin-right: 3%;
-        cursor: pointer;  
+        margin-right: 3%; 
         display: flex;
     }
     
