--- a/scss/html/_mqueries.scss
+++ b/scss/html/_mqueries.scss
@@ -16,8 +16,21 @@
             flex-direction: column;
             align-items: center;
             .card-img{
-                width: 500px;
+                width: 400px;
                 height: 250px;
+            }
+        }
+        .card:hover{
+            transform: none;
+            transition: none;
+            box-shadow: none;
+        }
+        form{
+            width: auto;
+            fieldset{
+                margin: 20px 10px;
+                padding: 0;
+                width: auto;
             }
         }
     }
@@ -67,10 +80,13 @@
                 box-shadow: none;
             }
         }
-        fieldset{
-            margin: 20px 10px;
-            padding: 0;
+        form{
             width: auto;
+            fieldset{
+                margin: 20px 10px;
+                padding: 0;
+                width: auto;
+            }
         }
         
     }
