--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ main .parrafo-home, main .promo {
 
 /*GENERAL*/
 body {
+  width: 100%;
   margin: 0;
   padding: 0;
   background-color: #edeec9;
@@ -19,26 +20,27 @@ body {
     background-color: #A3B18A; }
     body header .logo {
       width: 13%; }
+    body header .nav-link:hover {
+      font-weight: bold; }
   body main h1 {
     margin-top: 30px;
+    margin-bottom: 30px;
     text-align: center; }
   body footer {
-    margin-top: 80px;
-    margin-bottom: 5px;
-    margin-left: 5px;
+    background-color: #A3B18A;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
     text-align: center;
-    font-size: 10px;
     bottom: 0; }
 
 /*INDEX*/
 main .slide {
   transition: 2s; }
+  main .slide .carousel-inner {
+    width: 100%; }
   main .slide div .carousel-item {
-    width: 1200px;
     height: 300px;
-    margin-top: 10px;
-    margin-bottom: 15px;
-    margin-left: 80px;
     justify-content: center;
     object-fit: cover; }
 
@@ -46,87 +48,52 @@ main .subtitulo-home {
   margin-top: 50px;
   text-align: center; }
 
-main .card {
-  background-color: #edeec9;
-  display: inline-flex;
-  margin-left: 10px; }
-
-main .card:hover {
-  transform: scale(1.05);
-  transition: 0.3s;
-  border: #A3B18A;
-  box-shadow: 0px 13px 30px -3px #3d3c3c; }
-
 main .box-imagen {
   display: flex;
-  justify-content: center; }
-
-main .casa {
-  justify-content: center;
-  align-items: center;
-  object-fit: cover;
-  cursor: pointer;
-  width: 17rem;
-  height: 300px;
-  margin-top: 3%;
-  margin-bottom: 0;
-  margin-left: 3%;
-  margin-right: 3%;
-  display: flex; }
-
-main .box-texto {
-  margin-top: -4%;
-  margin-right: 1%;
-  margin-left: 2%;
-  text-align: center;
-  display: flex;
-  justify-content: space-around; }
-  main .box-texto h3 {
-    margin-top: 70px;
-    margin-bottom: 30px;
-    text-align: center; }
-    main .box-texto h3 .opciones {
-      margin-left: 10%; }
-    main .box-texto h3 .opciones2 {
-      margin-left: 3%; }
+  justify-content: space-evenly;
+  align-items: center; }
+  main .box-imagen .card {
+    background-color: #edeec9;
+    display: inline-flex;
+    margin-left: 10px; }
+  main .box-imagen .card:hover {
+    transform: scale(1.05);
+    transition: 0.3s;
+    border: #A3B18A;
+    box-shadow: 0px 13px 30px -3px #3d3c3c; }
+  main .box-imagen .casa {
+    justify-content: center;
+    align-items: center;
+    object-fit: cover;
+    cursor: pointer;
+    height: 300px; }
 
 /*SOBRE NOSOTROS*/
 .container {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
-  justify-content: center;
-  align-items: center;
-  grid-template-areas: "main-sn box-imagen" "main-sn box-imagen";
-  gap: 10px; }
+  gap: 10px;
+  display: flex;
+  width: 100%;
+  margin-top: 5%;
+  align-items: center; }
   .container main {
     margin-left: 0;
-    margin-right: 20px; }
-    .container main .main-sn {
-      grid-area: main-sn; }
+    margin-right: 10px;
+    font-size: 1.3rem; }
     .container main .sobren {
       justify-content: center;
-      margin-top: 10px;
-      margin-bottom: 20px;
-      margin-left: 5px;
-      margin-right: 5px;
+      margin: 20px 10px;
       align-items: center;
       text-align: justify; }
-      .container main .sobren #parrafo1 {
-        margin-top: 40px; }
       .container main .sobren #ultimo {
         margin-top: -5px; }
   .container section {
     margin: 0; }
-    .container section .box-imagen {
-      grid-area: box-imagen; }
     .container section .casa2 {
-      width: 68%;
-      height: 70%;
-      position: relative;
-      top: 50px;
-      left: 50px;
-      right: 20px; }
+      width: 100%;
+      margin: 50px 30px;
+      justify-content: center;
+      align-items: center;
+      border-radius: 4px; }
 
 /*DESTINOS*/
 main {
@@ -174,7 +141,8 @@ main {
 
 /*PROMOCIONES*/
 main .card {
-  margin-top: 40px; }
+  margin-top: 40px;
+  cursor: pointer; }
   main .card .card-title {
     margin-top: 120px; }
   main .card .card-text {
@@ -182,8 +150,7 @@ main .card {
   main .card .card-img {
     width: 800px;
     height: 250px;
-    object-fit: cover;
-    cursor: pointer; }
+    object-fit: cover; }
   main .card .card-img:hover {
     transform: scale(1.02);
     transition: .5s; }
@@ -200,13 +167,19 @@ fieldset {
     width: 100%;
     padding: 5px;
     border-radius: 4px; }
+  fieldset .label-boton {
+    display: none; }
   fieldset .boton {
     width: 50%;
     margin-top: 5px;
     margin-left: 100px;
     display: flex;
     justify-content: center;
+    align-items: center;
     border-radius: 4px; }
+
+.titulo-cto {
+  font-size: 1.3rem; }
 
 .contacto {
   margin-left: -5px;
