--- a/scss/html/_inicio.scss
+++ b/scss/html/_inicio.scss
@@ -3,13 +3,18 @@
 main{
     .slide{
         transition: 2s;
+        .carousel-inner{
+            width: 100%;
+        }
         div{
             .carousel-item{
-                width: 1200px;
+                // width: 90%;
+                // width: 1200px;
                 height: 300px;
-                margin-top: 10px; 
-                margin-bottom: 15px;
-                margin-left: 80px;
+                // margin: auto auto;
+                // margin-top: 10px; 
+                // margin-bottom: 15px;
+                // margin-left: 80px;
                 justify-content: center;
                 object-fit: cover;
             }
@@ -22,51 +27,59 @@ main{
         margin-top: 50px;
         text-align: center;
     }
-    .card{
+    .box-imagen{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        .card{
         background-color: $color-secundario;
         display: inline-flex;
         margin-left: 10px;
-    }
-    .card:hover{
+        }
+        .card:hover{
         transform: scale(1.05);
         transition: 0.3s;
         border: $color-principal;
         box-shadow: 0px 13px 30px -3px rgb(61, 60, 60);
-    }
-    .box-imagen{
-        display: flex;
-        justify-content: center;
-    }
-    .casa{
+        }
+        .casa{
         @include imagenes;
-        width: 17rem;
+        // width: 17rem;
         height: 300px;
-        margin-top: 3%;
-        margin-bottom: 0;
-        margin-left: 3%;
-        margin-right: 3%; 
-        display: flex;
+        // margin-top: 3%;
+        // margin-bottom: 0;
+        // margin-left: 3%;
+        // margin-right: 3%; 
+        // display: flex;
+        }
     }
     
-    .box-texto{
-        margin-top: -4%;
-        margin-right: 1%;
-        margin-left: 2%;
-        text-align: center;
-        display: flex;
-        justify-content: space-around;
-       h3{
-        margin-top: 70px;
-        margin-bottom: 30px;
-        text-align: center;
-        .opciones{
-            margin-left: 10%;
-        }
-        .opciones2{
-            margin-left: 3%;
-        }
-        } 
-    }
+    
+    // .box-imagen{
+    //     display: flex;
+    //     justify-content: center;
+    // }
+    
+    
+    // .box-texto{
+    //     margin-top: -4%;
+    //     margin-right: 1%;
+    //     margin-left: 2%;
+    //     text-align: center;
+    //     display: flex;
+    //     justify-content: space-around;
+    //    h3{
+    //     margin-top: 70px;
+    //     margin-bottom: 30px;
+    //     text-align: center;
+    //     .opciones{
+    //         margin-left: 10%;
+    //     }
+    //     .opciones2{
+    //         margin-left: 3%;
+    //     }
+    //     } 
+    // }
     
     
 }
