--- a/scss/html/_mqueries.scss
+++ b/scss/html/_mqueries.scss
@@ -1,3 +1,14 @@
+// @media screen and (min-width: 600px){
+//     form{
+//         width: auto;
+//         display: flex;
+//         fieldset{
+//             margin: 20px 10px;
+//             padding: 0;
+//         }
+//     }
+// }
+
 @media screen and (max-width: 600px){
     header{
         .logo{
