--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,7 @@
 
 /*GENERAL*/
 body{
+    width: 100%;
     margin: 0;
     padding: 0;
     background-color: $color-secundario;
@@ -21,19 +22,27 @@ body{
         .logo{
             width: 13%;
         }
+        .nav-link:hover{
+            font-weight: bold;
+        }
     }
     main{
         h1{
             margin-top: 30px;
+            margin-bottom: 30px;
             text-align: center;
         }
     }
     footer{
-        margin-top: 80px;
-        margin-bottom: 5px;
-        margin-left: 5px;
+        background-color: $color-principal;
+        position: absolute;
+        // margin-top: 80px;
+        // margin-bottom: 5px;
+        // margin-left: 5px;
+        left: 50%;
+        transform: translate(-50%, 0);
         text-align: center;
-        font-size: 10px;
+        // font-size: 10px;
         bottom: 0;
     }
        
